# tetsCurs1

./: CMakeLists.txt
source/: main.cpp
